<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">F.A.N.T.Y.</string>
    <string name="hello_world">This is my world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="link">Link</string>
    <string name="description">Description</string>
    <string name="fetch">Fetch Feed</string>
    <string name="title_activity_results">ResultsActivity</string>

</resources>
